# MQRemote

./: CMakeLists.txt  MQRemote.cpp
